--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-header" alt="FacioPay logo" />
     <nav>
       <a href="#about">About</a>
       <a href="#founders">Founders</a>
@@ -223,11 +222,11 @@
       <!-- Feature image cards -->
       <div class="cards">
         <div class="card">
-          <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?fit=crop&w=800&q=80" alt="Face recognition payment" />
+          <img src="https://live.staticflickr.com/1946/30188201497_c72e2fd9ef_b.jpg" alt="Face recognition payment" />
           <p>Facial Recognition Payment</p>
         </div>
         <div class="card">
-          <img src="https://images.unsplash.com/photo-1665686304496-24f6b2b6e8f6?fit=crop&w=800&q=80" alt="Palm vein scan payment" />
+          <img src="https://media.istockphoto.com/id/1204262620/photo/identity.jpg?s=612x612&w=0&k=20&c=K4Zq9VNuDqHiv2w6FT0wh6w-jOfg2eE-r24Qb2GSTAc=" alt="Palm vein scan payment" />
           <p>Palm Vein Recognition Payment</p>
         </div>
       </div>
