--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
       <!-- Feature image cards -->
       <div class="cards">
         <div class="card">
-          <img src="https://live.staticflickr.com/1946/30188201497_c72e2fd9ef_b.jpg" alt="Face recognition payment" />
-          <p>Facial Recognition Payment</p>
+          <img src="https://static.vecteezy.com/system/resources/previews/000/581/100/non_2x/biometric-person-identification-facial-recognition-concept-futuristic-low-polygonal-human-face-vector.jpg" alt="Face recognition payment" />
+          <p>Pay with Your Face</p>
         </div>
         <div class="card">
           <img src="https://media.istockphoto.com/id/1204262620/photo/identity.jpg?s=612x612&w=0&k=20&c=K4Zq9VNuDqHiv2w6FT0wh6w-jOfg2eE-r24Qb2GSTAc=" alt="Palm vein scan payment" />
-          <p>Palm Vein Recognition Payment</p>
+          <p>Pay with Your Palm</p>
         </div>
       </div>
 
