--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 
   <header>
     <nav>
+      <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-hero" alt="FacioPay Logo" />
       <a href="#about">About</a>
       <a href="#founders">Founders</a>
       <a href="#contact">Contact</a>
@@ -226,7 +227,7 @@
           <p>Pay with Your Face</p>
         </div>
         <div class="card">
-          <img src="https://media.istockphoto.com/id/1204262620/photo/identity.jpg?s=612x612&w=0&k=20&c=K4Zq9VNuDqHiv2w6FT0wh6w-jOfg2eE-r24Qb2GSTAc=" alt="Palm vein scan payment" />
+          <img src="https://media.istockphoto.com/id/96824132/photo/security-access.jpg?s=2048x2048&w=is&k=20&c=cyYF5vSFmD8PkwPqIQnUOg0lf1tCgoQQLAvk1Ei9znQ=" alt="Palm vein scan payment" />
           <p>Pay with Your Palm</p>
         </div>
       </div>
