--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <p>Pay with Your Face</p>
         </div>
         <div class="card">
-          <img src="https://media.istockphoto.com/id/96824132/photo/security-access.jpg?s=2048x2048&w=is&k=20&c=cyYF5vSFmD8PkwPqIQnUOg0lf1tCgoQQLAvk1Ei9znQ=" alt="Palm vein scan payment" />
+          <img src="https://media.istockphoto.com/id/1351299526/vector/electronic-hand-scan-technology-on-blue-dark-background-handprint-cyber-security.jpg?s=612x612&w=0&k=20&c=8u8jT26Z2649xrxOwxRbsucE_vRDG9z4e4aWbYAfkec=" alt="Palm vein scan payment" />
           <p>Pay with Your Palm</p>
         </div>
       </div>
