--- a/index.html
+++ b/index.html
@@ -89,29 +89,39 @@
       margin-bottom: 1rem;
     }
 
-    .cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      margin-top: 3rem;
-    }
+  .cards {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+  }
 
-    .card {
-      background: var(--white);
-      padding: 2rem;
-      border-radius: 1rem;
-      width: 300px;
-      text-align: center;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
-      transition: transform 0.3s;
-    }
+  .card {
+    width: 300px;
+    height: 350px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 
-    .card img {
-      max-width: 100%;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
+  .card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+  }
+
+  .card p {
+    font-size: 1.1em;
+    padding: 10px;
+    margin: 0;
+  }
 
     .card:hover {
       transform: translateY(-6px);
@@ -221,6 +231,8 @@
       <p>Pay with a smile and a wave. FacioPay brings facial recognition technology to revolutionize everyday transactions—fast, secure, and touch-free.</p>
 
       <!-- Feature image cards -->
+
+      
       <div class="cards">
         <div class="card">
           <img src="https://static.vecteezy.com/system/resources/previews/000/581/100/non_2x/biometric-person-identification-facial-recognition-concept-futuristic-low-polygonal-human-face-vector.jpg" alt="Face recognition payment" />
