--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <section class="hero">
       <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-hero" alt="FacioPay Logo" />
       <h1>Welcome to FacioPay</h1>
-      <p>Pay with a smile and a wave. FacioPay brings facial recognition technology to revolutionize everyday transactions—fast, secure, and touch-free.</p>
+      <p>Your face and palm are your wallet. FacioPay uses biometric authentication to deliver fast, frictionless, and secure payments.</p>
 
       <!-- Feature image cards -->
 
