--- a/index.html
+++ b/index.html
@@ -251,18 +251,18 @@
       <div class="cards">
         <div class="card">
           <div class="card-icon">👋</div>
-          <h3>Touchless Payments</h3>
-          <p>No phone, card, or cash needed—just your face and a wave.</p>
+          <h3>Hands-Free Payment</h3>
+          <p>Say goodbye to your credit card, wallet, or phone. With FacioPay, making payments is as easy as a smile and a wave. Pay at your favorite store or send money to a friend—no need to carry anything with you. It's that simple and convenient.</p>
         </div>
         <div class="card">
           <div class="card-icon">⚡</div>
-          <h3>Lightning Fast</h3>
-          <p>Pay in seconds and skip the wait. Perfect for busy lives.</p>
+          <h3>Faster Checkout</h3>
+          <p>Waiting in line is a hassle. FacioPay reduces checkout time, allowing both merchants and consumers to complete transactions instantly. Experience faster payments and more efficient service, all without the usual delays.</p>
         </div>
         <div class="card">
           <div class="card-icon">🔒</div>
           <h3>Highly Secure</h3>
-          <p>Bank-grade biometric encryption to protect your data.</p>
+          <p>We prioritize your privacy. Using state-of-the-art biometric encryption technology, we ensure your data is stored securely and only used for transaction authentication. Your information is never shared, and you have full control—you can delete your data anytime. With FacioPay, security is our top priority.</p>
         </div>
       </div>
     </section>
