--- a/index.html
+++ b/index.html
@@ -215,14 +215,16 @@
 </head>
 <body>
 
-  <header>
-    <nav>
-      <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-hero" alt="FacioPay Logo" />
+<header>
+  <nav>
+    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-hero" alt="FacioPay Logo" />
+    <div class="nav-links">
       <a href="#about">About</a>
       <a href="#founders">Founders</a>
       <a href="#contact">Contact</a>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
 
   <main>
     <section class="hero">
