--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="founder">
           <img src="https://media.licdn.com/dms/image/v2/C4E03AQG-d3ARyteo1w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1592196724834?e=1752105600&v=beta&t=n7iW8LjHm6nIJrwaDDMSq8THjG-VO6V9K7qa2Q7w7wY" alt="Kanak Agrawal">
           <h3>Kanak Agrawal</h3>
-          <p>Data science leader with deep fintech expertise from PayPal and Capital One.</p>
+          <p>Payment industry professional with 8 years of experience in banking and financial services, and deep expertise in machine learning and data science. Experience includes working at leading institutions such as PayPal and Capital One.</p>
         </div>
         <div class="founder">
           <img src="https://media.licdn.com/dms/image/v2/C4E03AQFPFGAwQLWjpg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1621921125895?e=1752105600&v=beta&t=Se3SFt7g8l90wF4hjNBBfJXLggBd91V1rlHp_qmWJAw" alt="Harish Bhakuni">
@@ -286,7 +286,7 @@
         <div class="founder">
           <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1752105600&v=beta&t=tBmSjvb8HU4iQXeTykAUFNkUV6l17xHFVrWMkxNUqfg" alt="Siddharth Pandey">
           <h3>Siddharth Pandey</h3>
-          <p>Cloud engineer and AI enthusiast with experience at Amazon and LinkedIn.</p>
+          <p>Senior Software Engineer with over 9 years of experience designing and developing secure, scalable billing systems and payment infrastructure for leading technology companies, including Amazon and LinkedIn.</p>
         </div>
       </div>
     </section>
@@ -294,7 +294,7 @@
     <section id="contact">
       <h2>Contact Us</h2>
       <div class="contact-form">
-        <p>Email us at <a href="mailto:faciopay2025@gmail.com">faciopay2025@gmail.com</a></p>
+        <p>Email us at <a href="mailto:faciopay2025@gmail.com">faciopay@gmail.com</a></p>
         <input type="text" placeholder="Your Name" />
         <input type="email" placeholder="Your Email" />
         <textarea placeholder="Your Message" rows="5"></textarea>
