--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <div class="founder">
           <img src="https://media.licdn.com/dms/image/v2/C4E03AQFPFGAwQLWjpg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1621921125895?e=1752105600&v=beta&t=Se3SFt7g8l90wF4hjNBBfJXLggBd91V1rlHp_qmWJAw" alt="Harish Bhakuni">
           <h3>Harish Bhakuni</h3>
-          <p>Distributed systems expert with 6+ years at Amazon Web Services.</p>
+          <p>Software development professional with over 6 years of experience in distributed systems, storage, and security domains. Expertise includes working with cloud-native architectures and open-source technologies. Harish has contributed to major projects at Amazon Web Services (AWS) and the OpenSearch Project.</p>
         </div>
         <div class="founder">
           <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1752105600&v=beta&t=tBmSjvb8HU4iQXeTykAUFNkUV6l17xHFVrWMkxNUqfg" alt="Siddharth Pandey">
