--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
     .logo-hero {
       height: 80px;
       margin-bottom: 1rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .cards {
