--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       --primary: #222831;
       --accent: #E63946;
       --background: #F1F3F6;
-      --text: #2B2D42;
+      --text: #222831;
       --white: #ffffff;
     }
 
