--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
       color: var(--white);
     }
 
+    .header-left {
+      display: flex;
+      align-items: center;
+    }
+
     .logo-header {
       height: 50px;
     }
 
-    nav a {
+    .header-right nav a {
       color: var(--white);
       text-decoration: none;
       margin-left: 1.5rem;
@@ -45,7 +50,7 @@
       transition: color 0.3s;
     }
 
-    nav a:hover {
+    .header-right nav a:hover {
       color: var(--accent);
     }
 
@@ -138,10 +143,10 @@
     }
 
     iframe {
-      width: 100%;
+      width: 720px;
       border: none;
       border-radius: 1rem;
-      margin-top: 3rem; /* increased margin for distance */
+      margin-top: 3rem;
       box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     }
 
@@ -214,100 +219,104 @@
         flex-direction: column;
         align-items: center;
       }
+
+      iframe {
+        width: 100%;
+      }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <nav>
-    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-hero" alt="FacioPay Logo" />
-    <div class="nav-links">
+  <div class="header-left">
+    <img src="https://raw.githubusercontent.com/KanakAgrawalKgp/faciopay/refs/heads/main/Color%20logo%20with%20background.png" class="logo-header" alt="FacioPay Logo" />
+  </div>
+  <div class="header-right">
+    <nav>
       <a href="#about">About</a>
       <a href="#founders">Founders</a>
       <a href="#contact">Contact</a>
-    </div>
-  </nav>
+    </nav>
+  </div>
 </header>
 
-  <main>
-    <section class="hero">
-      <h1>Welcome to FacioPay</h1>
-      <p>Your face and palm are your wallet. FacioPay uses biometric authentication to deliver fast, frictionless, and secure payments.</p>
+<main>
+  <section class="hero">
+    <h1>Welcome to FacioPay</h1>
+    <p>Your face and palm are your wallet. FacioPay uses biometric authentication to deliver fast, frictionless, and secure payments.</p>
 
-      <!-- Feature image cards -->
-
-      
-      <div class="cards">
-        <div class="card">
-          <img src="https://static.vecteezy.com/system/resources/previews/000/581/100/non_2x/biometric-person-identification-facial-recognition-concept-futuristic-low-polygonal-human-face-vector.jpg" alt="Face recognition payment" />
-          <p>Pay with Your Face</p>
-        </div>
-        <div class="card">
-          <img src="https://media.istockphoto.com/id/1351299526/vector/electronic-hand-scan-technology-on-blue-dark-background-handprint-cyber-security.jpg?s=612x612&w=0&k=20&c=8u8jT26Z2649xrxOwxRbsucE_vRDG9z4e4aWbYAfkec=" alt="Palm vein scan payment" />
-          <p>Pay with Your Palm</p>
-        </div>
+    <!-- Feature image cards -->
+    <div class="cards">
+      <div class="card">
+        <img src="https://static.vecteezy.com/system/resources/previews/000/581/100/non_2x/biometric-person-identification-facial-recognition-concept-futuristic-low-polygonal-human-face-vector.jpg" alt="Face recognition payment" />
+        <p>Pay with Your Face</p>
       </div>
-
-      <!-- YouTube video -->
-      <iframe height="315" src="https://www.youtube.com/embed/YX8BzK_LU0E?start=33" allowfullscreen title="Product Demo"></iframe>
-
-      <!-- Benefit cards -->
-      <div class="cards">
-        <div class="card">
-          <div class="card-icon">👋</div>
-          <h3>Hands-Free Payment</h3>
-          <p>Say goodbye to your credit card, wallet, or phone. With FacioPay, making payments is as easy as a smile and a wave. Pay at your favorite store or send money to a friend—no need to carry anything with you. It's that simple and convenient.</p>
-        </div>
-        <div class="card">
-          <div class="card-icon">⚡</div>
-          <h3>Faster Checkout</h3>
-          <p>Waiting in line is a hassle. FacioPay reduces checkout time, allowing both merchants and consumers to complete transactions instantly. Experience faster payments and more efficient service, all without the usual delays.</p>
-        </div>
-        <div class="card">
-          <div class="card-icon">🔒</div>
-          <h3>Highly Secure</h3>
-          <p>We prioritize your privacy. Using state-of-the-art biometric encryption technology, we ensure your data is stored securely and only used for transaction authentication. Your information is never shared, and you have full control—you can delete your data anytime. With FacioPay, security is our top priority.</p>
-        </div>
+      <div class="card">
+        <img src="https://media.istockphoto.com/id/1351299526/vector/electronic-hand-scan-technology-on-blue-dark-background-handprint-cyber-security.jpg?s=612x612&w=0&k=20&c=8u8jT26Z2649xrxOwxRbsucE_vRDG9z4e4aWbYAfkec=" alt="Palm vein scan payment" />
+        <p>Pay with Your Palm</p>
       </div>
-    </section>
+    </div>
 
-    <section id="founders">
-      <h2>Our Founders</h2>
-      <div class="founders">
-        <div class="founder">
-          <img src="https://media.licdn.com/dms/image/v2/C4E03AQG-d3ARyteo1w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1592196724834?e=1752105600&v=beta&t=n7iW8LjHm6nIJrwaDDMSq8THjG-VO6V9K7qa2Q7w7wY" alt="Kanak Agrawal">
-          <h3>Kanak Agrawal</h3>
-          <p>Payment industry professional with 8 years of experience in banking and financial services, and deep expertise in machine learning and data science. Experience includes working at leading institutions such as PayPal and Capital One.</p>
-        </div>
-        <div class="founder">
-          <img src="https://media.licdn.com/dms/image/v2/C4E03AQFPFGAwQLWjpg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1621921125895?e=1752105600&v=beta&t=Se3SFt7g8l90wF4hjNBBfJXLggBd91V1rlHp_qmWJAw" alt="Harish Bhakuni">
-          <h3>Harish Bhakuni</h3>
-          <p>Software development professional with over 6 years of experience in distributed systems, storage, and security domains. Expertise includes working with cloud-native architectures and open-source technologies. Harish has contributed to major projects at Amazon Web Services (AWS) and the OpenSearch Project.</p>
-        </div>
-        <div class="founder">
-          <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1752105600&v=beta&t=tBmSjvb8HU4iQXeTykAUFNkUV6l17xHFVrWMkxNUqfg" alt="Siddharth Pandey">
-          <h3>Siddharth Pandey</h3>
-          <p>Senior Software Engineer with over 9 years of experience designing and developing secure, scalable billing systems and payment infrastructure for leading technology companies, including Amazon and LinkedIn.</p>
-        </div>
+    <!-- YouTube video -->
+    <iframe height="315" src="https://www.youtube.com/embed/YX8BzK_LU0E?start=33" allowfullscreen title="Product Demo"></iframe>
+
+    <!-- Benefit cards -->
+    <div class="cards" style="flex-wrap: nowrap;">
+      <div class="card">
+        <div class="card-icon">👋</div>
+        <h3>Hands-Free Payment</h3>
+        <p>Say goodbye to your credit card, wallet, or phone. With FacioPay, making payments is as easy as a smile and a wave. Pay at your favorite store or send money to a friend—no need to carry anything with you. It's that simple and convenient.</p>
       </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <div class="contact-form">
-        <p>Email us at <a href="mailto:faciopay2025@gmail.com">faciopay@gmail.com</a></p>
-        <input type="text" placeholder="Your Name" />
-        <input type="email" placeholder="Your Email" />
-        <textarea placeholder="Your Message" rows="5"></textarea>
-        <button type="submit">Send Message</button>
+      <div class="card">
+        <div class="card-icon">⚡</div>
+        <h3>Faster Checkout</h3>
+        <p>Waiting in line is a hassle. FacioPay reduces checkout time, allowing both merchants and consumers to complete transactions instantly. Experience faster payments and more efficient service, all without the usual delays.</p>
       </div>
-    </section>
-  </main>
+      <div class="card">
+        <div class="card-icon">🔒</div>
+        <h3>Highly Secure</h3>
+        <p>We prioritize your privacy. Using state-of-the-art biometric encryption technology, we ensure your data is stored securely and only used for transaction authentication. Your information is never shared, and you have full control—you can delete your data anytime. With FacioPay, security is our top priority.</p>
+      </div>
+    </div>
+  </section>
 
-  <footer>
-    <p>&copy; 2025 FacioPay. All rights reserved.</p>
-  </footer>
+  <section id="founders">
+    <h2>Our Founders</h2>
+    <div class="founders">
+      <div class="founder">
+        <img src="https://media.licdn.com/dms/image/v2/C4E03AQG-d3ARyteo1w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1592196724834?e=1752105600&v=beta&t=n7iW8LjHm6nIJrwaDDMSq8THjG-VO6V9K7qa2Q7w7wY" alt="Kanak Agrawal">
+        <h3>Kanak Agrawal</h3>
+        <p>Payment industry professional with 8 years of experience in banking and financial services, and deep expertise in machine learning and data science. Experience includes working at leading institutions such as PayPal and Capital One.</p>
+      </div>
+      <div class="founder">
+        <img src="https://media.licdn.com/dms/image/v2/C4E03AQFPFGAwQLWjpg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1621921125895?e=1752105600&v=beta&t=Se3SFt7g8l90wF4hjNBBfJXLggBd91V1rlHp_qmWJAw" alt="Harish Bhakuni">
+        <h3>Harish Bhakuni</h3>
+        <p>Software development professional with over 6 years of experience in distributed systems, storage, and security domains. Expertise includes working with cloud-native architectures and open-source technologies. Harish has contributed to major projects at Amazon Web Services (AWS) and the OpenSearch Project.</p>
+      </div>
+      <div class="founder">
+        <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1752105600&v=beta&t=tBmSjvb8HU4iQXeTykAUFNkUV6l17xHFVrWMkxNUqfg" alt="Siddharth Pandey">
+        <h3>Siddharth Pandey</h3>
+        <p>Senior Software Engineer with over 9 years of experience designing and developing secure, scalable billing systems and payment infrastructure for leading technology companies, including Amazon and LinkedIn.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <div class="contact-form">
+      <p>Email us at <a href="mailto:faciopay2025@gmail.com">faciopay@gmail.com</a></p>
+      <input type="text" placeholder="Your Name" />
+      <input type="email" placeholder="Your Email" />
+      <textarea placeholder="Your Message" rows="5"></textarea>
+      <button type="submit">Send Message</button>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>&copy; 2025 FacioPay. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
