--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     .card {
       width: 100%;
-      max-width: 350px; /* flexible width with max limit */
+      max-width: 350px;
       height: auto;
       border: 1px solid #ccc;
       border-radius: 10px;
@@ -260,8 +260,11 @@
 
     <!-- YouTube video -->
     <iframe height="315" src="https://www.youtube.com/embed/YX8BzK_LU0E?start=33" allowfullscreen title="Product Demo"></iframe>
+  </section>
 
-    <!-- Benefit cards -->
+  <!-- Why Choose Us Section -->
+  <section>
+    <h2>Why Choose Us</h2>
     <div class="cards" style="flex-wrap: nowrap;">
       <div class="card">
         <div class="card-icon">👋</div>
