--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
     <div class="contact-form">
-      <p>Email us at <a href="mailto:faciopay2025@gmail.com">faciopay@gmail.com</a></p>
+      <p>Email us at <a href="mailto:faciopay2025@gmail.com">info@faciopay.app</a></p>
       <input type="text" placeholder="Your Name" />
       <input type="email" placeholder="Your Email" />
       <textarea placeholder="Your Message" rows="5"></textarea>
