--- a/index.html
+++ b/index.html
@@ -257,17 +257,17 @@
       <div class="card">
         <div class="card-icon">👋</div>
         <h3>Hands-Free Payment</h3>
-        <p>Say goodbye to your credit card, wallet, or phone. With FacioPay, making payments is as easy as a smile and a wave. Pay at your favorite store or send money to a friend—no need to carry anything with you. It's that simple and convenient.</p>
+        <p>FacioPay eliminates the need for physical cards or devices, enabling secure, seamless transactions with a smile or palm scan. Whether shopping or sending funds, FacioPay offers a fast, contactless payment solution for a modern, secure experience.</p>
       </div>
       <div class="card">
         <div class="card-icon">⚡</div>
         <h3>Faster Checkout</h3>
-        <p>Waiting in line is a hassle. FacioPay reduces checkout time, allowing both merchants and consumers to complete transactions instantly. Experience faster payments and more efficient service, all without the usual delays.</p>
+        <p>FacioPay eliminates the delays of traditional checkout lines, enabling instant transactions for both merchants and consumers. Experience faster, more efficient service with every payment.</p>
       </div>
       <div class="card">
         <div class="card-icon">🔒</div>
         <h3>Highly Secure</h3>
-        <p>We prioritize your privacy. Using state-of-the-art biometric encryption technology, we ensure your data is stored securely and only used for transaction authentication. Your information is never shared, and you have full control—you can delete your data anytime. With FacioPay, security is our top priority.</p>
+        <p>FacioPay stores only tokenized data in encrypted form, ensuring security. Your biometric data is never shared with third parties and is used solely for transaction authentication. You retain full control, with the ability to delete your biometric data at any time.</p>
       </div>
     </div>
   </section>
@@ -278,17 +278,17 @@
       <div class="founder">
         <img src="https://media.licdn.com/dms/image/v2/C4E03AQG-d3ARyteo1w/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1592196724834?e=1752105600&v=beta&t=n7iW8LjHm6nIJrwaDDMSq8THjG-VO6V9K7qa2Q7w7wY" alt="Kanak Agrawal">
         <h3>Kanak Agrawal</h3>
-        <p>Payment industry professional with 8 years of experience in banking and financial services, and deep expertise in machine learning and data science. Experience includes working at leading institutions such as PayPal and Capital One.</p>
+        <p>A seasoned payment industry professional with 8 years of experience in banking and financial services, specializing in machine learning and data science. Proven expertise through roles at prestigious organizations, including PayPal and Capital One.</p>
       </div>
       <div class="founder">
         <img src="https://media.licdn.com/dms/image/v2/C4E03AQFPFGAwQLWjpg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1621921125895?e=1752105600&v=beta&t=Se3SFt7g8l90wF4hjNBBfJXLggBd91V1rlHp_qmWJAw" alt="Harish Bhakuni">
         <h3>Harish Bhakuni</h3>
-        <p>Software development professional with over 6 years of experience in distributed systems, storage, and security domains. Expertise includes working with cloud-native architectures and open-source technologies. Harish has contributed to major projects at Amazon Web Services (AWS) and the OpenSearch Project.</p>
+        <p>A skilled software development professional with over 6 years of experience in distributed systems, storage, and security. Expertise includes cloud-native architectures and open-source technologies. Harish has made significant contributions to key projects at Amazon Web Services (AWS) and the OpenSearch Project.</p>
       </div>
       <div class="founder">
         <img src="https://media.licdn.com/dms/image/v2/C5603AQHjZWy99f3H_Q/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1641549988212?e=1752105600&v=beta&t=tBmSjvb8HU4iQXeTykAUFNkUV6l17xHFVrWMkxNUqfg" alt="Siddharth Pandey">
         <h3>Siddharth Pandey</h3>
-        <p>Senior Software Engineer with over 9 years of experience designing and developing secure, scalable billing systems and payment infrastructure for leading technology companies, including Amazon and LinkedIn.</p>
+        <p>Accomplished Senior Software Engineer with over 9 years of expertise in architecting and delivering secure, scalable billing systems and payment infrastructures for top-tier technology firms, including Amazon and LinkedIn. Proven track record of driving innovation and ensuring operational excellence in high-impact, mission-critical systems.</p>
       </div>
     </div>
   </section>
