--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
       border-radius: 10px;
       overflow: hidden;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      text-align: center;
       background: #fff;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
     }
 
     .card img {
@@ -128,8 +128,8 @@
 
     .card p {
       font-size: 1.1em;
-      padding: 10px;
       margin: 0;
+      text-align: justify;
     }
 
     .card:hover {
@@ -171,6 +171,10 @@
       height: 120px;
       object-fit: cover;
       margin-bottom: 1rem;
+    }
+
+    .founder p {
+      text-align: justify;
     }
 
     .contact-email {
