--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </div>
 
     <!-- YouTube video -->
-    <iframe height="315" src="https://www.youtube.com/embed/YX8BzK_LU0E?start=33" allowfullscreen title="Product Demo"></iframe>
+    <iframe height="315" src="https://youtu.be/Yvg_bJN1B2A?feature=shared" allowfullscreen title="Product Demo"></iframe>
   </section>
 
   <!-- Why Choose Us Section -->
