--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
     </div>
 
     <!-- YouTube video -->
-    <iframe height="315" src="https://www.youtube.com/watch?v=Yvg_bJN1B2A" allowfullscreen title="Product Demo"></iframe>
+    <iframe height="315" src="https://www.youtube.com/embed/Yvg_bJN1B2A?si=qam_t5BPDVfCCbb9" allowfullscreen title="Product Demo"></iframe>
   </section>
 
   <!-- Why Choose Us Section -->
